chore: improve code comment
Signed-off-by: Gabriele Quaresima <gabriele.quaresima@enterprisedb.com>

--- a/config/crd/bases/postgresql.cnpg.io_databases.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_databases.yaml
@@ -107,8 +107,8 @@ spec:
                   rule: self == oldSelf
               ensure:
                 default: present
-                description: Ensure the Database is `present` or `absent` - defaults
-                  to "present"
+                description: Ensure the PostgreSQL database is `present` or `absent`
+                  - defaults to "present"
                 enum:
                 - present
                 - absent
