feat(import): extra options for `pg_dump` and `pg_restore`
Introduce two new options in the `.spec.initdb.import` stanza that allow users
to pass additional options to `pg_dump` and `pg_restore`.

Closes #5832

Signed-off-by: Ben Healey <bentastic27@gmail.com>

--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -1518,6 +1518,18 @@ spec:
                             items:
                               type: string
                             type: array
+                          pgDumpExtraOptions:
+                            description: List of options to append to the pg_dump
+                              command
+                            items:
+                              type: string
+                            type: array
+                          pgRestoreExtraOptions:
+                            description: List of options to append to the pg_restore
+                              command
+                            items:
+                              type: string
+                            type: array
                           postImportApplicationSQL:
                             description: |-
                               List of SQL queries to be executed as a superuser in the application
