docs: add permissions required by kubectl CNPG plugin
Document every permission required by every command in the
CNPG plugin, this to let users assign specific permissions for specific
tasks.

Closes #5330

Signed-off-by: Gabriele Quaresima <gabriele.quaresima@enterprisedb.com>
Signed-off-by: Jonathan Gonzalez V. <jonathan.gonzalez@enterprisedb.com>
Signed-off-by: Jaime Silvela <jaime.silvela@enterprisedb.com>
Signed-off-by: Francesco Canovai <francesco.canovai@enterprisedb.com>

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -2,7 +2,8 @@ site_name: CloudNativePG
 site_author: The CloudNativePG Contributors
 docs_dir: src
 
-theme: readthedocs
+theme:
+  name: readthedocs
 
 extra_css:
   - css/override.css
@@ -11,6 +12,7 @@ markdown_extensions:
   - admonition
   - def_list
   - attr_list
+  - footnotes
 
 nav:
   - index.md
