feat: flexible data durability
This patch allows the user to relax the strict enforcement of data
durability with the new synchronous replication interface by setting
`.spec.postgresql.synchronous.dataDurability` to `preferred`.

By doing that, the operator is capping the number of required
synchronous standby replicas to the number of ready instances.

This configuration requires `standbyNamesPre` and `standbyNamesPost` to
be empty.

Closes: #5793

Signed-off-by: Leonardo Cecchi <leonardo.cecchi@enterprisedb.com>

--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -4058,6 +4058,20 @@ spec:
                     description: Configuration of the PostgreSQL synchronous replication
                       feature
                     properties:
+                      dataDurability:
+                        default: required
+                        description: |-
+                          If "required", strict enforcement of data durability is enforced and
+                          write operations with synchronous commit set to `on`, `remote_write`
+                          or `remote_apply` will hang if there are no sufficient number of
+                          healthy replicas.
+                          If "preferred" data durability will be enforced whenever healthy
+                          replicas are available. This can only be set if both
+                          `standbyNamesPre` and `standbyNamesPost` are empty.
+                        enum:
+                        - required
+                        - preferred
+                        type: string
                       maxStandbyNamesFromCluster:
                         description: |-
                           Specifies the maximum number of local cluster pods that can be
@@ -4102,6 +4116,12 @@ spec:
                     - method
                     - number
                     type: object
+                    x-kubernetes-validations:
+                    - message: dataDurability set to 'preferred' requires empty 'standbyNamesPre'
+                        and empty 'standbyNamesPost'
+                      rule: self.dataDurability!='preferred' || ((!has(self.standbyNamesPre)
+                        || self.standbyNamesPre.size()==0) && (!has(self.standbyNamesPost)
+                        || self.standbyNamesPost.size()==0))
                 type: object
               primaryUpdateMethod:
                 default: restart
