ci: collect apiserver audit logs
Add the ENABLE_APISERVER_AUDIT env variable to the kind e2e scripts. If
set to true, kind will configure auditing for postgresql.cnpg.io
resources and mount a local directory to write the audit logs on.

Signed-off-by: Francesco Canovai <francesco.canovai@enterprisedb.com>

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -716,6 +716,8 @@ jobs:
           cat config/manager/env_override.yaml
       -
         name: Run Kind End-to-End tests
+        env:
+          ENABLE_APISERVER_AUDIT: true
         run:
           make e2e-test-kind
       -
