--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -4061,13 +4061,12 @@ spec:
                       dataDurability:
                         default: required
                         description: |-
-                          If "required", strict enforcement of data durability is enforced and
-                          write operations with synchronous commit set to `on`, `remote_write`
-                          or `remote_apply` will hang if there are no sufficient number of
-                          healthy replicas.
-                          If "preferred" data durability will be enforced whenever healthy
-                          replicas are available. This can only be set if both
-                          `standbyNamesPre` and `standbyNamesPost` are empty.
+                          If "required", data durability is strictly enforced. Write operations with
+                          synchronous commit set to `on`, `remote_write`, or `remote_apply` will hang
+                          if there are not enough healthy replicas.
+                          If "preferred", data durability is enforced when healthy replicas are available.
+                          The required number of instances is reduced if there are not enough healthy replicas.
+                          This can only be set if both `standbyNamesPre` and `standbyNamesPost` are empty.
                         enum:
                         - required
                         - preferred
