--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -48,11 +48,11 @@ body:
       label: Version
       description: What is the version of CloudNativePG you are running?
       options:
-        - 1.24.0
-        - 1.23.4
-        - trunk (main)
-        - older in 1.23.x
-        - older minor (unsupported)
+        - "1.24.0"
+        - "1.23.4"
+        - "trunk (main)"
+        - "older in 1.23.x"
+        - "older minor (unsupported)"
     validations:
       required: true
   - type: dropdown
@@ -60,12 +60,12 @@ body:
     attributes:
       label: What version of Kubernetes are you using?
       options:
-        - 1.31
-        - 1.30
-        - 1.29
-        - 1.28
-        - 1.27 (unsupported)
-        - other (unsupported)
+        - "1.31"
+        - "1.30"
+        - "1.29"
+        - "1.28"
+        - "1.27 (unsupported)"
+        - "other (unsupported)"
     validations:
       required: true
   - type: dropdown
