chore: fix scaffolding
Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

--- a/config/crd/bases/postgresql.cnpg.io_subscriptions.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_subscriptions.yaml
@@ -126,6 +126,9 @@ spec:
                 description: Ready is true if the database was reconciled correctly
                 type: boolean
             type: object
+        required:
+        - metadata
+        - spec
         type: object
     served: true
     storage: true
