docs: fix minor issues
* Mark all omitempty fields in the API as optional, so they won't appear
as required in the documentation
* Fix broken links to structs now in the barman-cloud API
* Make Database resource appear in the API resource types

Signed-off-by: Francesco Canovai <francesco.canovai@enterprisedb.com>

--- a/docs/config.yaml
+++ b/docs/config.yaml
@@ -1,5 +1,6 @@
 hiddenMemberFields:
   - "TypeMeta"
+  - "synchronizeReplicasCache"
 
 externalPackages:
   - match: ^github\.com/prometheus-operator/prometheus-operator/pkg/apis/monitoring/v1\.RelabelConfig$
@@ -31,7 +32,14 @@ externalPackages:
 
 hideTypePatterns:
   - "ParseError$"
-  - "List$"
+  # We cannot exclude all `List$` because we declare PluginConfigurationList
+  - "BackupList$"
+  - "ClusterList$"
+  - "ClusterImageCatalogList$"
+  - "DatabaseList$"
+  - "ImageCatalogList$"
+  - "PoolerList$"
+  - "ScheduledBackupList$"
 
 markdownDisabled: false
 
