--- a/tests/e2e/fixtures/declarative_databases/database-with-delete-reclaim-policy.yaml.template
+++ b/tests/e2e/fixtures/declarative_databases/database-with-delete-reclaim-policy.yaml.template
@@ -1,13 +1,13 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Database
 metadata:
-  name: db-declarative
+  name: db-declarative-delete
 spec:
   name: declarative
   owner: app
-  lc_ctype: "en_US.utf8"
+  lc_ctype: C
   lc_collate: C
-  encoding: SQL_ASCII
-  template: template0
+  encoding: UTF8
+  databaseReclaimPolicy: delete
   cluster:
     name: cluster-with-declarative-databases
