--- a/docs/src/samples/publication-example.yaml
+++ b/docs/src/samples/publication-example.yaml
@@ -1,11 +1,11 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Publication
 metadata:
-  name: publication-sample
+  name: publication-example
 spec:
-  name: pub
-  dbname: app
   cluster:
     name: cluster-example
+  name: pub-all
+  dbname: app
   target:
     allTables: true
