chore: reconcile CRD Roles
Signed-off-by: Jaime Silvela <jaime.silvela@enterprisedb.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -141,6 +141,7 @@ rules:
   - clusters
   - databases
   - poolers
+  - roles
   - scheduledbackups
   verbs:
   - create
@@ -155,6 +156,7 @@ rules:
   resources:
   - backups/status
   - databases/status
+  - roles/status
   - scheduledbackups/status
   verbs:
   - get
