chore: more fixes
Signed-off-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>

--- a/docs/src/samples/subscription-example.yaml
+++ b/docs/src/samples/subscription-example.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   name: sub
   dbname: app
-  publicationName: pub
+  publicationName: pub-all
   cluster:
     name: cluster-example-dest
   externalClusterName: cluster-example
