fix: add the missing permissions logic and complete the role reconciler
Signed-off-by: Jaime Silvela <jaime.silvela@enterprisedb.com>

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
 - bases/postgresql.cnpg.io_imagecatalogs.yaml
 - bases/postgresql.cnpg.io_clusterimagecatalogs.yaml
 - bases/postgresql.cnpg.io_databases.yaml
+- bases/postgresql.cnpg.io_roles.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 patches:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
