chore(perf): Use controller-runtime pprof server
The controller-runtime provides a pprof server that we can just enable,
this use that capability and remove the pprof server we used to have.

Closes #5999

Signed-off-by: Jonathan Gonzalez V. <jonathan.gonzalez@enterprisedb.com>

--- a/config/manager/env_override.yaml
+++ b/config/manager/env_override.yaml
@@ -20,3 +20,7 @@ spec:
         - --webhook-port=9443
         - --log-level=debug
         - --pprof-server=true
+        ports:
+          - containerPort: 6060
+            name: pprof
+            protocol: TCP
