--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -24,7 +24,6 @@ nav:
   - image_catalog.md
   - bootstrap.md
   - database_import.md
-  - declarative_publication_subscription_management.md
   - security.md
   - instance_manager.md
   - scheduling.md
@@ -32,6 +31,7 @@ nav:
   - failure_modes.md
   - rolling_update.md
   - replication.md
+  - logical_replication.md
   - backup.md
   - backup_barmanobjectstore.md
   - wal_archiving.md
