--- a/docs/src/samples/cluster-example-logical-destination.yaml
+++ b/docs/src/samples/cluster-example-logical-destination.yaml
@@ -22,14 +22,10 @@ spec:
   - name: cluster-example
     connectionParameters:
       host: cluster-example-rw.default.svc
-      # We're using the superuser to allow the publication to be
-      # created directly when connected to the target server.
-      # See cluster-example-logical-source.yaml for more information
-      # about this.
-      user: postgres
+      user: app
       dbname: app
     password:
-      name: cluster-example-superuser
+      name: cluster-example-app
       key: password
 ---
 apiVersion: postgresql.cnpg.io/v1
